--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,12 @@ services:
     container_name: strapi_nginx_app
     ports:
       - "80:80"
+      - "443:443"
     depends_on:
       - app
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - /etc/letsencrypt:/letsencrypt/:ro
     healthcheck:
       test: curl --fail http://localhost:1337 || exit 1
       interval: 60s
