--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -47,7 +47,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
+      uses: aws-actions/configure-aws-credentials@v1.1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -63,6 +63,6 @@ jobs:
         ssh -o StrictHostKeyChecking=no ubuntu@ec2-13-55-138-141.ap-southeast-2.compute.amazonaws.com <<EOF
           cd /home/ubuntu/gen-cms-server/gen-cms/
           git pull
-          docker-compose down
-          docker-compose up --build -d
+          sudo docker-compose down
+          sudo docker-compose up --build -d
         EOF
