--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -9,10 +9,12 @@ RUN npm install -g npm@9.5.1
 
 RUN npm install
 
+COPY .env.dev .env
+
 COPY . .
 
 RUN npm run build
 
-EXPOSE 1337
+EXPOSE 1338
 
 CMD ["npm","run","develop"]
