--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "strapi": "strapi"
   },
   "dependencies": {
+    "@palmabit/strapi-app-version": "^1.1.0",
+    "@strapi/plugin-documentation": "^4.11.0",
+    "@strapi/plugin-graphql": "^4.11.0",
     "@strapi/plugin-i18n": "4.10.7",
     "@strapi/plugin-users-permissions": "4.10.7",
     "@strapi/provider-upload-aws-s3": "^4.10.7",
     "@strapi/strapi": "4.10.7",
-    "pg": "8.8.0"
+    "pg": "8.8.0",
+    "strapi-plugin-component-preview": "^1.0.9",
+    "strapi-plugin-config-sync": "^1.1.2",
+    "strapi-plugin-ezforms": "^0.1.5"
   },
   "author": {
     "name": "A Strapi developer"
