--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   app:
     build:
       context: ./
+      dockerfile: Dockerfile
     container_name: strapi_app
     ports:
       - 1337:1337
@@ -19,7 +20,7 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt:/letsencrypt/:ro
     healthcheck:
-      test: curl --fail http://localhost:1337 || exit 1
+      test: ["CMD-SHELL", "curl --fail http://localhost:1337 || exit 1", "&&", "curl --fail http://localhost:1338 || exit 1"]
       interval: 60s
       retries: 5
       start_period: 20s
