--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -63,8 +63,6 @@ jobs:
         ssh -o StrictHostKeyChecking=no ubuntu@ec2-13-55-138-141.ap-southeast-2.compute.amazonaws.com <<EOF
           cd /home/ubuntu/gen-cms-server/gen-cms/
           git pull
-          sudo docker-compose -f docker-compose.yml down
-          sudo docker-compose -f docker-compose.yml up --build -d
-          sudo docker-compose -f docker-compose.development.yml down
-          sudo docker-compose -f docker-compose.development.yml up --build -d
+          sudo docker-compose down
+          sudo docker-compose up --build -d
         EOF
