--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -63,6 +63,7 @@ jobs:
         ssh -o StrictHostKeyChecking=no ubuntu@ec2-13-55-138-141.ap-southeast-2.compute.amazonaws.com <<EOF
           cd /home/ubuntu/gen-cms-server/gen-cms/
           git pull
+          npm run build
           sudo docker-compose down
           sudo docker-compose up --build -d
         EOF
