--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -65,6 +65,6 @@ jobs:
           git pull
           npm run build
           sudo docker-compose down
-          sudo docker system prune -a
+          sudo docker system prune -a -f
           sudo docker-compose up --build -d
         EOF
