--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,6 @@ services:
     container_name: strapi_app
     ports:
       - 1337:1337
-  app_development:
-    build:
-      context: ./
-      dockerfile: Dockerfile.development
-    container_name: strapi_app_development
-    ports:
-      - 1338:1337
   nginx:
     image: nginx:latest
     container_name: strapi_nginx_app
@@ -27,7 +20,7 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt:/letsencrypt/:ro
     healthcheck:
-      test: ["CMD-SHELL", "curl --fail http://localhost:1337 || exit 1", "&&", "curl --fail http://localhost:1338 || exit 1"]
+      test: ["CMD-SHELL", "curl --fail http://localhost:1337 || exit 1"]
       interval: 60s
       retries: 5
       start_period: 20s
