--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pg": "8.8.0",
     "strapi-plugin-component-preview": "^1.0.9",
     "strapi-plugin-config-sync": "^1.1.2",
-    "strapi-plugin-ezforms": "^0.1.5"
+    "strapi-plugin-ezforms": "^0.1.5",
+    "strapi-plugin-populate-deep": "^2.0.0"
   },
   "author": {
     "name": "A Strapi developer"
