--- a/.env.prod
+++ b/.env.prod
@@ -19,9 +19,14 @@ DATABASE_POOL_MIN=2
 DATABASE_POOL_MAX=10
 
 # AWS-S3 Config
-AWS_ACCESS_KEY_ID=AKIA4UWX4ZKUV2W5UVYH
-AWS_ACCESS_SECRET=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
-AWS_REGION=ap-southeast-2
-AWS_BUCKET=strapi-upload-images-bucket
+# AWS_ACCESS_KEY_ID=AKIA4UWX4ZKUV2W5UVYH
+# AWS_ACCESS_SECRET=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
+# AWS_REGION=ap-southeast-2
+# AWS_BUCKET=strapi-upload-images-bucket
+# JWT_SECRET=54WrZRMJlyEothpyZvMsow==
+AWS_ACCESS_KEY_ID=AKIAQQQQVFVHYQ2DB2RZ
+AWS_ACCESS_SECRET=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
+AWS_REGION=us-east-1
+AWS_BUCKET=gen-cms
 JWT_SECRET=54WrZRMJlyEothpyZvMsow==
 
