--- a/.env.prod
+++ b/.env.prod
@@ -22,6 +22,7 @@ DATABASE_POOL_MAX=10
 AWS_ACCESS_KEY_ID=AKIA4UWX4ZKUV2W5UVYH
 AWS_ACCESS_SECRET=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
 AWS_REGION=ap-southeast-2
-AWS_BUCKET=strapi-upload-images-bucket
+AWS_BUCKET=gen-cms-bucket
+# AWS_BUCKET=strapi-upload-images-bucket
 JWT_SECRET=54WrZRMJlyEothpyZvMsow==
 
