--- a/.env.dev
+++ b/.env.dev
@@ -8,7 +8,7 @@ TRANSFER_TOKEN_SALT=DVusl1UZPiUURLqF7wd9vg==
 # Database
 DATABASE_CLIENT=postgres
 JWT_SECRET=BAx76DRzv+zGLjEZKeGxuw==
-AWS RDS Postgresql config
+# AWS RDS Postgresql config
 DATABASE_HOST=postgre-db.cjcmllj7vprg.ap-southeast-2.rds.amazonaws.com
 DATABASE_PORT=5432
 DATABASE_NAME=postgredb
