--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gen-cms",
+  "name": "bytez-admin-cms",
   "private": true,
   "version": "0.1.0",
   "description": "A Strapi application",
