--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,70 +1,70 @@
-# This workflow will build and push a new container image to Amazon ECR,
-# and then will deploy a new task definition to Amazon ECS, when there is a push to the "master" branch.
-#
-# To use this workflow, you will need to complete the following set-up steps:
-#
-# 1. Create an ECR repository to store your images.
-#    For example: `aws ecr create-repository --repository-name my-ecr-repo --region us-east-2`.
-#    Replace the value of the `ECR_REPOSITORY` environment variable in the workflow below with your repository's name.
-#    Replace the value of the `AWS_REGION` environment variable in the workflow below with your repository's region.
-#
-# 2. Create an ECS task definition, an ECS cluster, and an ECS service.
-#    For example, follow the Getting Started guide on the ECS console:
-#      https://us-east-2.console.aws.amazon.com/ecs/home?region=us-east-2#/firstRun
-#    Replace the value of the `ECS_SERVICE` environment variable in the workflow below with the name you set for the Amazon ECS service.
-#    Replace the value of the `ECS_CLUSTER` environment variable in the workflow below with the name you set for the cluster.
-#
-# 3. Store your ECS task definition as a JSON file in your repository.
-#    The format should follow the output of `aws ecs register-task-definition --generate-cli-skeleton`.
-#    Replace the value of the `ECS_TASK_DEFINITION` environment variable in the workflow below with the path to the JSON file.
-#    Replace the value of the `CONTAINER_NAME` environment variable in the workflow below with the name of the container
-#    in the `containerDefinitions` section of the task definition.
-#
-# 4. Store an IAM user access key in GitHub Actions secrets named `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`.
-#    See the documentation for each action used below for the recommended IAM policies for this IAM user,
-#    and best practices on handling the access key credentials.
+# # This workflow will build and push a new container image to Amazon ECR,
+# # and then will deploy a new task definition to Amazon ECS, when there is a push to the "master" branch.
+# #
+# # To use this workflow, you will need to complete the following set-up steps:
+# #
+# # 1. Create an ECR repository to store your images.
+# #    For example: `aws ecr create-repository --repository-name my-ecr-repo --region us-east-2`.
+# #    Replace the value of the `ECR_REPOSITORY` environment variable in the workflow below with your repository's name.
+# #    Replace the value of the `AWS_REGION` environment variable in the workflow below with your repository's region.
+# #
+# # 2. Create an ECS task definition, an ECS cluster, and an ECS service.
+# #    For example, follow the Getting Started guide on the ECS console:
+# #      https://us-east-2.console.aws.amazon.com/ecs/home?region=us-east-2#/firstRun
+# #    Replace the value of the `ECS_SERVICE` environment variable in the workflow below with the name you set for the Amazon ECS service.
+# #    Replace the value of the `ECS_CLUSTER` environment variable in the workflow below with the name you set for the cluster.
+# #
+# # 3. Store your ECS task definition as a JSON file in your repository.
+# #    The format should follow the output of `aws ecs register-task-definition --generate-cli-skeleton`.
+# #    Replace the value of the `ECS_TASK_DEFINITION` environment variable in the workflow below with the path to the JSON file.
+# #    Replace the value of the `CONTAINER_NAME` environment variable in the workflow below with the name of the container
+# #    in the `containerDefinitions` section of the task definition.
+# #
+# # 4. Store an IAM user access key in GitHub Actions secrets named `AWS_ACCESS_KEY_ID` and `AWS_SECRET_ACCESS_KEY`.
+# #    See the documentation for each action used below for the recommended IAM policies for this IAM user,
+# #    and best practices on handling the access key credentials.
 
-name: Deploy to Amazon EC2
+# name: Deploy to Amazon EC2
 
-on:
-  push:
-    branches: [ "master" ]
+# on:
+#   push:
+#     branches: [ "master" ]
 
-env:
-  AWS_REGION: ap-southeast-2                   # set this to your preferred AWS region, e.g. us-west-1
+# env:
+#   AWS_REGION: ap-southeast-2                   # set this to your preferred AWS region, e.g. us-west-1
 
-permissions:
-  contents: read
+# permissions:
+#   contents: read
 
-jobs:
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    environment: production
+# jobs:
+#   deploy:
+#     name: Deploy
+#     runs-on: ubuntu-latest
+#     environment: production
 
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+#     steps:
+#     - name: Checkout
+#       uses: actions/checkout@v3
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
+#     - name: Configure AWS credentials
+#       uses: aws-actions/configure-aws-credentials@v2
+#       with:
+#         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#         aws-region: ${{ env.AWS_REGION }}
 
-    - name: Setup SSH
-      uses: webfactory/ssh-agent@v0.5.3
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+#     - name: Setup SSH
+#       uses: webfactory/ssh-agent@v0.5.3
+#       with:
+#         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       
-    - name: Deploy to EC2
-      run: |
-        ssh -o StrictHostKeyChecking=no ubuntu@ec2-13-55-138-141.ap-southeast-2.compute.amazonaws.com <<EOF
-          cd /home/ubuntu/gen-cms-server/gen-cms/
-          git pull
-          npm run build
-          sudo docker-compose down
-          sudo docker system prune -a -f
-          sudo docker-compose up --build -d
-        EOF
+#     - name: Deploy to EC2
+#       run: |
+#         ssh -o StrictHostKeyChecking=no ubuntu@ec2-13-55-138-141.ap-southeast-2.compute.amazonaws.com <<EOF
+#           cd /home/ubuntu/gen-cms-server/gen-cms/
+#           git pull
+#           npm run build
+#           sudo docker-compose down
+#           sudo docker system prune -a -f
+#           sudo docker-compose up --build -d
+#         EOF
